GOV-322 support not creating task in CeQueue if pending task exists